0.11 2015-11-02
* Remove debugging code in central loop
* Fix bug in JavaScript escaping

0.10 2015-11-02
* Implement more complete Unicode support, including validation.
* Dereference behaviour for objects changed.
* Optional reference handling
* "validate" method now warns rather than croaking.
* Backtracing removed for user input errors.
* Remove regexp and code reference handling in favour of general
  ref_handler method.
* Add "fatal_errors" method to change behaviour to/from dying on
  error.

0.09 2015-10-31
* Deal better with references containing numerical and string values

0.08 2015-10-30
* Disable compatibility testing against Mojo::JSON.

0.07 2015-10-29
* More flexible formatting for floating point numbers
* Experimental support for booleans
* User option to escape / into \/.
* User-generated JSON callbacks
* Validation of user-generated JSON
* Boolean round-trips with JSON::Parse 0.37

0.06 2015-10-27
* More tests and benchmarks for floating point
* Fixes bug with ASCII control characters

0.05 2015-10-26
* Handling of NaN, negative and positive infinity via
  stringification.
* Removed dereferencing behaviour for objects.
* Documentation clarifies some behaviours and performance.
* Further performance wrangling for integers.

0.04 2015-10-22
* Performance increases for output of strings and integers
* Partial Unicode handling added

0.03 2015-10-21
* JSON::Parse changed from prerequisite to test prerequisite .. and back
* Handle magic and blessed types slightly better (work in progress)

0.02 2015-10-20
* Undefined values are now printed as "null"

0.01 2015-10-18
* Initial version released to CPAN
