@@ -1,6 +1,8 @@
 0.11 2015-11-02
-* Remove debugging code in central loop
+* String processing improvements
 * Fix bug in JavaScript escaping
+* Fix bug in 4-byte UTF-8 strings
+* "replace_bad_utf8" method added.
 
 0.10 2015-11-02
 * Implement more complete Unicode support, including validation.
